ql/src/test/results/clientnegative/impala/refresh_table1.q.out
PREHOOK: query: create table managed_tbl_neg (c1 int)
		
partitioned by (p_double double , p_boolean boolean, p_bigint bigint, p_float float, p_tinyint tinyint, p_smallint smallint, p_date date)
PREHOOK: type: CREATETABLE
PREHOOK: Output: database:default
PREHOOK: Output: default@managed_tbl_neg
POSTHOOK: query: create table managed_tbl_neg (c1 int)
		
partitioned by (p_double double , p_boolean boolean, p_bigint bigint, p_float float, p_tinyint tinyint, p_smallint smallint, p_date date)
POSTHOOK: type: CREATETABLE
POSTHOOK: Output: database:default
POSTHOOK: Output: default@managed_tbl_neg
FAILED: ImpalaParseException Syntax error in line 7:
  improper_syntax `managed_tbl_neg`
                  ^
Encountered: IDENTIFIER
Expected: ADD, ALTER, AS, BETWEEN, CACHED, CHANGE, COMMENT, DROP, EXECUTE, FROM, IS, LIKE, LOCATION, PARTITION, PARTITIONED, PRIMARY, PURGE, RECOVER, RENAME, REPLACE, ROW, SELECT, SET, SORT, STORED, STRAIGHT_JOIN, TABLESAMPLE, TBLPROPERTIES, TO, UNCACHED, UNSET, VALUES, WITH, CLUSTERED


